--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 						
 									<div class="features">
 										<article>
-											<span class="icon fa-rocket"></span>
+											<span href="#" class="image"><img src="images/BlockI-Logo.png" alt=""
+												style="float:left;width:111px;" /></span>
+											<span> \\\</span>
 											<div class="content">
 												<h3>Portitor ullamcorper</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
