--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong> You Lyu</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li> -->
+										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 									</ul>
 								</header>
 
@@ -35,9 +35,6 @@
 											<p>A Computer Science Student </br>In University of Illinois at Urbana Champaign </p>
 										</header>
 										<p></p>
-										<ul class="actions fit">
-											<li><a href="#academic" class="button primary fit">Academical</a></li>
-											<li><a href="#hobbies" class="button fit">Hobbies</a></li>
 										
 									</div>
 									<span class="image object">
@@ -54,14 +51,20 @@
 									<div class="features">
 										<article>
 											<span href="#" class="image"><img src="images/BlockI-Logo.png" alt=""
-												style="float:left;width:111px;" /></span>
-											<span> \\\</span>
+												style="width:120px;" /></span>
+						
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3> University of Illinois at Urbana Champaign</h3>
+												<p>
+													Pursuing bachelor degree in Statistics and Computer Science </br>
+												</p>
+												<ul class="actions fit">
+													<li><a href="education.html" class="button primary fit">Courses Taken</a></li>
+													<!-- <li><a href="#hobbies" class="button fit">Hobbies</a></li> -->
+												</ul>
 											</div>
 										</article>
-										<article>
+										<!-- <article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
 												<h3>Sapien veroeros</h3>
@@ -81,12 +84,12 @@
 												<h3>Sed magna finibus</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
+										</article> -->
 									</div>
 								</section>
 
 							<!-- Section -->
-								<section id="hobbies">
+								<!-- <section id="hobbies">
 									<header class="major">
 										<h2>Ipsum sed dolor</h2>
 									</header>
@@ -140,7 +143,7 @@
 											</ul>
 										</article>
 									</div>
-								</section>
+								</section> -->
 
 						</div>
 					</div>
@@ -150,11 +153,11 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
@@ -164,7 +167,7 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="education.html">Education</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<!-- <li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -187,12 +190,12 @@
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Ante interdum</h2>
 									</header>
@@ -213,26 +216,25 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Contact Me</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">youlyu2@illinois.edu</a></li>
+										<li class="icon solid fa-phone">(217) 200-5860</li>
+										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+										Nashville, TN 00000-0000</li> -->
 									</ul>
 								</section>
 
 							<!-- Footer -->
-								<footer id="footer">
+								<!-- <footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
